added input field/button for contact

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
   <input type="file" accept=".csv" id="upload"/>
+  <label for="contact">Ansprechpartner</label>
+  <input type="text" id="contact"/>
+  <button id="send">OK</button>
   <div>
     <form action="#" style="display: flex;">
     </form>
