--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
   <input type="file" accept=".csv" id="upload"/>
-  <label for="contact">Ansprechpartner</label>
-  <input type="text" id="contact"/>
+  <label for="contactname">Ansprechpartner</label>
+  <input type="text" id="contactname" class="contact"/>
   <label for="contactnumber">Ansprechpartner Tel.</label>
-  <input type="text" id="contactnumber"/>
+  <input type="text" id="contactnumber" class="contact"/>
   <label for="contactemail">Ansprechpartner E-Mail</label>
-  <input type="email" id="contactmail"/>
+  <input type="email" id="contactmail" class="contact"/>
   <button id="send">OK</button>
   <div>
     <h2>Bitte Lieferdetails zuweisen</h2>
