--- a/assets/1x1_label.html
+++ b/assets/1x1_label.html
@@ -26,10 +26,11 @@
         }
 
         .order-info {
-            width: 49%;
+            /* width: 49%; */
+            width: 100%;
             float: left;
         }
-b
+
         .order-details {
             width: 51%;
         }
