--- a/assets/deliverynote.html
+++ b/assets/deliverynote.html
@@ -34,7 +34,7 @@
 			</p>
 			<p class="c1">
 				<span class="c7">{{Ansprechpartner}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-				<span class="c5">&nbsp; {{Ansprechpartner Nummer}}&nbsp;&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;&nbsp;versand@kalenderliebe.org</span>
+				<span class="c5">&nbsp; {{Ansprechpartner Nummer}}&nbsp;&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;&nbsp;{{Ansprechpartner Email}}</span>
 			</p>
 			<p class="c0">
 				<span class="c3"></span>
@@ -97,7 +97,7 @@
 							</p>
 						</td>
 					</tr>
-                    <tr class="c22"><td class="c14" colspan="1" rowspan="1"><ul class="c18 lst-kix_list_1-0 start"><li class="c1 c19"><span class="c2">{{Bezeichnung}}</span></li></ul></td><td class="c13" colspan="1" rowspan="1"><p class="c1"><span class="c2">&nbsp;&nbsp;&nbsp;{{St&uuml;ckzahl}}</span></p></td></tr>
+					{{rows}}
 				</tbody>
 			</table>
 			<p class="c0">
@@ -111,7 +111,7 @@
 			</p>
 			<p class="c1">
 				<span class="c7">Paketdienst / Spedition &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-				<span class="c4">Kartons:&nbsp;_____&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;EW-Palette:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_____&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+				<span class="c4">Kartons:&nbsp;_____&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;EW-Palette:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_____</span>
 			</p>
 			<p class="c1">
 				<span class="c10 c11">(Nichtzutreffendes streichen)</span>
