--- a/index.html
+++ b/index.html
@@ -9,27 +9,30 @@
 </head>
 
 <body>
+  <div class="input">
   <input type="file" accept=".csv" id="upload"/>
-  <label for="contactname">Ansprechpartner</label>
+  <label for="contactname">Ansprechpartner:</label>
   <input type="text" id="contactname" class="contact"/>
-  <label for="contactnumber">Ansprechpartner Tel.</label>
+  <label for="contactnumber">Ansprechpartner Tel.:</label>
   <input type="text" id="contactnumber" class="contact"/>
-  <label for="contactemail">Ansprechpartner E-Mail</label>
+  <label for="contactemail">Ansprechpartner E-Mail:</label>
   <input type="email" id="contactmail" class="contact"/>
-  <button id="send">OK</button>
+  </div>
   <div>
-    <h2>Bitte Lieferdetails zuweisen</h2>
-    <form action="#" style="display: flex;">
+    <h2 id="header" style="display:none">Bitte Spalten zuweisen</h2>
+    <form id="options" action="#" style="display: flex;">
     </form>
-    <canvas width="200" height="200" id="preview"></canvas>
     <div id="container">
-      <div class="iframe-container">
-        <button id="renderPDF" style="display: block;">Render PDF</button>
-        <iframe class="iframe" id="pdfPreview"></iframe>
+      <div>
+        <button class="print" id="deliveryprint" style="display: block;">Drucken</button>
+        <iframe class="iframe" id="delPreview"></iframe>
+      </div>
+      <div>
+        <button class="print" id="labelprint" style="display: block;">Drucken</button>
+        <iframe class="iframe" id="labelPreview"></iframe>
       </div>
     </div>
   </div>
-  <script src="node_modules/canvas2pdf/lib/pdfkit.js"></script>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
